--- a/notes.org
+++ b/notes.org
@@ -136,6 +136,10 @@ Difference?]]
 ** Postgres:
 - [[https://postgrest.org/en/stable/][PostgREST: Serve a RESTful API from any Postgres database]].
 - [[https://www.docker.com/blog/how-to-use-the-postgres-docker-official-image/][Docker Blog: How to use the Postgres Docker Official Image]].
+** Reporting/Visualisation:
+- https://observablehq.com/ - Jupiter Notebooks style notebooks that can
+  connect to multiple data sources (no need for a Data Lake??) to provide
+  customisable graphs for Analytics. Also supports comments/collaboration.
 * Dev Environment Setup:
 ** Browsers:
 *** Chrome:
