--- a/notes.org
+++ b/notes.org
@@ -43,6 +43,9 @@ surf is a simple web browser based on WebKit2/GTK+. It is able to display
 websites and follow links. It supports the XEmbed protocol which makes it
 possible to embed it in another application. Furthermore, one can point surf to
 another URI by setting its XProperties.
+** RDP:
+- =xfreerdp= example connection string: ~xfreerdp /w:1920 /h:1080 /u:<username>
+  /v:<hostname>~
 * BuildTools:
 - [[https://www.gnu.org/software/make/][GNU Make: Makefiles with build targets]].
 - [[https://taskfile.dev/#/][Task: task runner / build tool that aims to be simpler than GNU Make]].
