--- a/notes.org
+++ b/notes.org
@@ -667,6 +667,12 @@ to an item of a source code.
   changelogs and release notes from a project's commit messages and metadata.
 - https://github.com/conventional-changelog/releaser-tools - Create a
   GitHub/GitLab/etc. release using a project's commit messages and metadata.
+** Alternative VCS's:
+- [[https://www.fossil-scm.org/home/doc/trunk/www/index.wiki][Fossil]] - Self-contained with VCS as a binary with: Project Management, WebUI,
+  Lightweight, self-host friendly, autosync.
+- [[https://pijul.org/][Pijul]] ([[https://pijul.org/manual/introduction.html][Pijul Docs]]) - Strong focus on conflict resolution (beyond GIT),
+  order-less applying of changes, partial clones. Support to import from Git
+  (not optimised).
 ** Configure git repo with explicit SSH Key:
 In cases where you need to use an explicit SSH key for a repo, eg. Personal +
 Work Github account, and you want a personal repo accessiable by both
