--- a/notes.org
+++ b/notes.org
@@ -578,6 +578,7 @@ rectangle (snap to area shortcuts).
 * Docker:
 - [[https://www.youtube.com/watch?v=fqMOX6JJhGo][YouTube: Docker Tutorial for Beginners - A Full DevOps Course on How to Run
   Applications in Containers]].
+- [[https://nodramadevops.com/containers/][No Drama DevOps: Containers]].
 ** Best Practices:
 *** No Root Access:
 A container should never be run with root-level access. A role-based access
